--- a/.github/workflows/react-ci.yaml
+++ b/.github/workflows/react-ci.yaml
@@ -2,12 +2,11 @@ name: Build and Test
 
 on:
   push:
-    branches:
-      - '*'
+    branches-ignore:
+      - main
   pull_request:
     branches:
       - main
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
