--- a/.github/workflows/react-cicd.yaml
+++ b/.github/workflows/react-cicd.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Build
         run: npm run build
   deploy:
+    needs: build-and-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
